# webpage-monitor

./: .gitignore  LICENSE  README.md  monitor.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
reqs/: requirements.txt
