[project]
name = "webpage-monitor"
version = "0.3.0"
description = ""
authors = [
    {name = "molanojustin",email = "160653314+molanojustin@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "certifi (>=2025.4.26,<2026.0.0)",
    "idna (>=3.10,<4.0)",
    "urllib3 (>=2.3.0,<3.0.0)"
]

[tool.poetry]
package-mode=false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
